Update index content

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <h1>Hello from the Cloud! YOYOYO</h1>
+    <h1>Hello from the Cloud! PANATHINAIKOS</h1>
     <p>This website is hosted on AWS S3.</p>
   </body>
 </html>
